Добавил пару штук на дашборд
