# TrackIt.API/Controllers/AnalyticsController.cs
@@ -1,5 +1,6 @@
 using MediatR;
 using Microsoft.AspNetCore.Mvc;
+using TrackIt.Application.DTOs.Analytics;
 using TrackIt.Application.Features.Analytics.Queries;
 
 namespace TrackIt.API.Controllers;
@@ -15,6 +16,7 @@ public class AnalyticsController(IMediator mediator) : ControllerBase
 	///     Получение общего баланса пользователя
 	/// </summary>
 	[HttpGet("balance")]
+	[ProducesResponseType(typeof(BalanceDto), 200)]
 	public async Task<IActionResult> GetBalance([FromQuery] GetBalanceQuery query, CancellationToken cancellationToken)
 	{
 		var result = await mediator.Send(query, cancellationToken);
@@ -25,6 +27,7 @@ public class AnalyticsController(IMediator mediator) : ControllerBase
 	///     Получение расходов по категориям
 	/// </summary>
 	[HttpGet("category-spending")]
+	[ProducesResponseType(typeof(IEnumerable<CategorySpendingDto>), 200)]
 	public async Task<IActionResult> GetCategorySpending([FromQuery] GetCategorySpendingQuery query, CancellationToken cancellationToken)
 	{
 		var result = await mediator.Send(query, cancellationToken);
@@ -35,6 +38,7 @@ public class AnalyticsController(IMediator mediator) : ControllerBase
 	///     Получение динамики расходов за месяц
 	/// </summary>
 	[HttpGet("monthly-trend")]
+	[ProducesResponseType(typeof(IEnumerable<DailySpendingDto>), 200)]
 	public async Task<IActionResult> GetDailySpending([FromQuery] GetDailySpendingDtoQuery query, CancellationToken cancellationToken)
 	{
 		var result = await mediator.Send(query, cancellationToken);
@@ -45,6 +49,7 @@ public class AnalyticsController(IMediator mediator) : ControllerBase
 	///     Получение среднего уровня месячных расходов
 	/// </summary>
 	[HttpGet("monthly-average")]
+	[ProducesResponseType(typeof(MonthlyAverageDto), 200)]
 	public async Task<IActionResult> GetMonthlyAverageSpending([FromQuery] GetMonthlyAverageDtoQuery query, CancellationToken cancellationToken)
 	{
 		var result = await mediator.Send(query, cancellationToken);
@@ -55,6 +60,7 @@ public class AnalyticsController(IMediator mediator) : ControllerBase
 	///     Получение топ-3 самых затратных категорий
 	/// </summary>
 	[HttpGet("top-categories")]
+	[ProducesResponseType(typeof(IEnumerable<TopCategoryDto>), 200)]
 	public async Task<IActionResult> GetTopExpensiveCategories([FromQuery] GetTopCategoryQuery query, CancellationToken cancellationToken)
 	{
 		var result = await mediator.Send(query, cancellationToken);
